--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "xtend": "~2.1.2",
     "once": "~1.3.0",
     "subarg": "0.0.1",
-    "style-deps": "~0.1.0"
+    "style-deps": "git://github.com/requireio/style-deps#breaking-changes"
   },
   "devDependencies": {
     "tape": "~2.4.2"
