--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "sheetify.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "author": "",
   "bin": {
@@ -14,9 +14,10 @@
     "xtend": "~2.1.2",
     "once": "~1.3.0",
     "subarg": "0.0.1",
-    "style-deps": "git://github.com/requireio/style-deps#breaking-changes"
+    "style-deps": "~1.0.2"
   },
   "devDependencies": {
-    "tape": "~2.4.2"
+    "tape": "~2.4.2",
+    "wrap-selectors": "~0.1.0"
   }
 }
