--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "xtend": "~2.1.2",
     "once": "~1.3.0",
     "subarg": "0.0.1",
-    "style-deps": "~1.1.0"
+    "style-deps": "^1.2.0"
   },
   "devDependencies": {
     "tape": "~2.4.2",
