--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "sheetify": "bin.js"
   },
   "dependencies": {
-    "xtend": "~2.1.2",
     "once": "~1.3.0",
+    "style-deps": "^1.2.0",
     "subarg": "0.0.1",
-    "style-deps": "git://github.com/requireio/style-deps#breaking-changes"
+    "xtend": "~2.1.2"
   },
   "devDependencies": {
     "tape": "~2.4.2"
