--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "sheetify.js",
   "scripts": {
-    "test": "node test.js"
+    "test": "faucet test/*.js"
   },
   "author": "",
   "bin": {
@@ -14,10 +14,12 @@
     "once": "~1.3.0",
     "style-deps": "^1.2.0",
     "subarg": "0.0.1",
-    "xtend": "~2.1.2"
+    "xtend": "~2.1.2",
+    "style-resolve": "0.0.0"
   },
   "devDependencies": {
     "tape": "~2.4.2",
-    "wrap-selectors": "~0.1.0"
+    "wrap-selectors": "~0.1.0",
+    "faucet": "0.0.1"
   }
 }
