--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "once": "~1.3.0",
+    "once": "^1.3.0",
     "style-deps": "^2.0.1",
     "style-resolve": "0.0.0",
     "subarg": "0.0.1",
-    "xtend": "~2.1.2"
+    "xtend": "^2.1.2"
   },
   "devDependencies": {
-    "tape": "~2.4.2",
-    "wrap-selectors": "~0.1.0",
-    "faucet": "0.0.1"
+    "tape": "^2.4.2",
+    "wrap-selectors": "^0.1.0",
+    "faucet": "^0.0.1"
   }
 }
