--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,5 @@
-#
-# Temp files.
-#
-
-lib-cov
-*.seed
-*.log
-*.csv
-*.dat
-*.out
-*.pid
-*.gz
-
-#
-# Temp folders.
-#
-
-pids/
-logs/
-results/
-coverage/
-
-#
-# Node.js.
-#
-
 node_modules/
-npm-debug.log
-
-#
-# OS X.
-#
-
+coverage/
+tmp/
+npm-debug.log*
 .DS_Store
