package.json: fix repository link
Signed-off-by: Yoshua Wuyts <i@yoshuawuyts.com>

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "bin": {
     "sheetify": "bin/cli.js"
   },
-  "repository": "yoshuawuyts/initialize-engine",
+  "repository": "sheetify/sheetify",
   "keywords": [
     "modular",
     "css",
