--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "deps": "dependency-check . && dependency-check . --extra --no-dev",
     "test": "standard && npm run deps && faucet test/*.js",
-    "test:cov": "standard && npm run deps && NODE_ENV=test istanbul cover test.js",
+    "test:cov": "standard && npm run deps && NODE_ENV=test istanbul cover test/*.js",
     "format": "standard --format"
   },
   "bin": {
