--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
   "dependencies": {
     "cliclopts": "^1.1.1",
     "minimist": "^1.2.0",
+    "noop2": "^2.0.0",
     "style-deps": "^2.0.1",
     "xtend": "^4.0.0"
   },
   "devDependencies": {
+    "concat-stream": "^1.5.0",
     "dependency-check": "^2.5.0",
     "faucet": "^0.0.1",
     "istanbul": "^0.3.19",
     "standard": "^5.2.1",
     "tape": "^4.2.0",
+    "through2": "^2.0.0",
     "wrap-selectors": "^0.1.0"
   }
 }
