--- a/package.json
+++ b/package.json
@@ -3,15 +3,9 @@
   "version": "2.0.3",
   "description": "Modular CSS bundler",
   "scripts": {
-    "deps": "dependency-check . && dependency-check . --extra --no-dev",
-    "deps:pkg": "ncu",
-    "deps:update": "ncu -a",
-    "test": "standard && npm run deps && faucet test/*.js",
-    "test:cov": "standard && npm run deps && NODE_ENV=test istanbul cover test/index.js",
+    "test": "standard && node test",
+    "test:cov": "standard && NODE_ENV=test istanbul cover test/index.js",
     "format": "standard --format"
-  },
-  "bin": {
-    "sheetify": "bin/cli.js"
   },
   "repository": "sheetify/sheetify",
   "keywords": [
@@ -23,21 +17,38 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "astw-babylon": "^1.0.0",
+    "babylon": "^5.8.23",
     "cliclopts": "^1.1.1",
+    "css-prefix": "0.0.2",
+    "domify": "^1.4.0",
+    "escodegen": "^1.7.0",
+    "findup": "^0.1.5",
+    "insert-css": "^0.2.0",
+    "is-require": "0.0.1",
+    "map-limit": "0.0.1",
     "minimist": "^1.2.0",
     "noop2": "^2.0.0",
-    "style-deps": "^2.0.1",
-    "xtend": "^4.0.0"
+    "postcss": "^5.0.10",
+    "postcss-class-prefix": "^0.3.0",
+    "postcss-prefix": "^1.0.0",
+    "resolve": "^1.1.6",
+    "run-waterfall": "^1.1.3",
+    "sleuth": "^0.1.1",
+    "static-eval": "^0.2.4",
+    "style-resolve": "0.0.0",
+    "through2": "^2.0.0",
+    "uuid": "^2.0.1"
   },
   "devDependencies": {
     "concat-stream": "^1.5.0",
-    "dependency-check": "^2.5.0",
-    "faucet": "^0.0.1",
     "istanbul": "^0.3.19",
     "npm-check-updates": "^2.2.0",
+    "sheetify-cssnext": "^1.0.0",
     "standard": "^5.2.1",
     "tape": "^4.2.0",
     "through2": "^2.0.0",
-    "wrap-selectors": "^0.1.0"
+    "wrap-selectors": "^0.1.0",
+    "xtend": "^4.0.1"
   }
 }
