--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "postcss": "^5.0.10",
     "postcss-class-prefix": "^0.3.0",
     "postcss-prefix": "^1.0.0",
+    "pump": "^1.0.1",
     "resolve": "^1.1.6",
     "run-waterfall": "^1.1.3",
     "sleuth": "^0.1.1",
@@ -50,5 +51,8 @@
     "through2": "^2.0.0",
     "wrap-selectors": "^0.1.0",
     "xtend": "^4.0.1"
+  },
+  "bin": {
+    "sheetify": "./bin/cli.js"
   }
 }
