--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss-class-prefix": "^0.3.0",
     "postcss-prefix": "^1.0.0",
     "pump": "^1.0.1",
+    "readable-stream": "^2.0.4",
     "resolve": "^1.1.6",
     "run-waterfall": "^1.1.3",
     "sleuth": "^0.1.1",
@@ -42,7 +43,7 @@
     "uuid": "^2.0.1"
   },
   "devDependencies": {
-    "concat-stream": "^1.5.0",
+    "concat-stream": "^1.5.1",
     "istanbul": "^0.3.19",
     "npm-check-updates": "^2.2.0",
     "sheetify-cssnext": "^1.0.0",
