--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "sheetify",
   "version": "3.3.3",
   "description": "Modular CSS bundler",
+  "repository": "sheetify/sheetify",
+  "license": "MIT",
   "scripts": {
-    "test": "standard && tape test/*",
-    "test:cov": "standard && NODE_ENV=test istanbul cover test/*",
+    "deps": "dependency-check . --entry transform.js . && dependency-check . --entry transform.js --extra --no-dev -i insert-css",
+    "test": "standard && npm run deps && tape test/*",
+    "test:cov": "standard && npm run deps && NODE_ENV=test istanbul cover test/coverage.js",
     "format": "standard --format"
   },
-  "repository": "sheetify/sheetify",
+  "browser": {
+    "index.js": "./browser.js"
+  },
   "keywords": [
     "modular",
     "css",
@@ -15,41 +20,23 @@
     "browserify",
     "css-modules"
   ],
-  "license": "MIT",
   "dependencies": {
-    "astw-babylon": "^1.0.0",
-    "babylon": "^5.8.23",
-    "caller-path": "^0.1.0",
-    "cliclopts": "^1.1.1",
-    "css-prefix": "0.0.2",
-    "domify": "^1.4.0",
-    "escodegen": "^1.7.0",
-    "findup": "^0.1.5",
+    "falafel": "^1.2.0",
     "insert-css": "^0.2.0",
-    "is-require": "0.0.1",
     "map-limit": "0.0.1",
-    "minimist": "^1.2.0",
-    "noop2": "^2.0.0",
     "postcss": "^5.0.10",
     "postcss-prefix": "^1.0.3",
-    "pump": "^1.0.1",
-    "readable-stream": "^2.0.4",
     "resolve": "^1.1.6",
-    "run-waterfall": "^1.1.3",
-    "sleuth": "^0.1.1",
-    "static-eval": "^0.2.4",
-    "style-resolve": "0.0.0",
-    "through2": "^2.0.0",
-    "uuid": "^2.0.1"
+    "through2": "^2.0.0"
   },
   "devDependencies": {
+    "browserify": "^13.0.0",
+    "dependency-check": "^2.5.1",
     "istanbul": "^0.3.19",
+    "jsdom": "^8.0.2",
     "npm-check-updates": "^2.2.0",
     "sheetify-cssnext": "^1.0.0",
     "standard": "^5.2.1",
-    "tape": "^4.2.0",
-    "through2": "^2.0.0",
-    "wrap-selectors": "^0.1.0",
-    "xtend": "^4.0.1"
+    "tape": "^4.2.0"
   }
 }
