--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "resolve": "^1.1.6",
     "static-module": "^1.1.3",
     "style-resolve": "0.0.0",
-    "uuid": "^2.0.1"
+    "uuid": "^2.0.1",
+    "xtend": "^4.0.1"
   },
   "devDependencies": {
     "concat-stream": "^1.5.1",
