--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "map-limit": "0.0.1",
     "mkdirp": "^0.5.1",
     "postcss": "^5.0.10",
-    "postcss-import": "^8.0.2",
     "postcss-prefix": "^1.0.3",
-    "resolve": "^1.1.6",
+    "resolve": "^1.1.7",
     "through2": "^2.0.0"
   },
   "devDependencies": {
     "browserify": "^13.0.0",
     "concat-stream": "^1.5.1",
+    "css-type-base": "^1.0.2",
     "dependency-check": "^2.5.1",
     "istanbul": "^0.3.19",
     "jsdom": "^8.0.2",
