--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "postcss": "^5.0.10",
     "postcss-prefix": "^1.0.3",
     "resolve": "^1.1.7",
-    "through2": "^2.0.0"
+    "through2": "^2.0.0",
+    "xtend": "^4.0.1"
   },
   "devDependencies": {
     "browserify": "^13.0.0",
