deps: set insert-css as peerdep
Signed-off-by: Yoshua Wuyts <i@yoshuawuyts.com>

Closes #59

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ node_js:
 - "5"
 sudo: false
 language: node_js
-script: "npm run test:cov"
+script: "npm install insert-css && npm run test:cov"
 after_script: "npm i -g codecov.io && cat ./coverage/lcov.info | codecov"
