--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "dependencies": {
     "end-of-stream": "^1.1.0",
     "falafel": "^1.2.0",
-    "insert-css": "^0.2.0",
     "is-stream": "^1.0.1",
     "map-limit": "0.0.1",
     "mkdirp": "^0.5.1",
@@ -33,6 +32,9 @@
     "style-resolve": "0.0.0",
     "through2": "^2.0.0",
     "xtend": "^4.0.1"
+  },
+  "peerDependencies": {
+    "insert-css": "^0.2.0"
   },
   "devDependencies": {
     "browserify": "^13.0.0",
