--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "postcss": "^5.0.10",
     "postcss-prefix": "^1.0.3",
     "resolve": "^1.1.7",
-    "style-resolve": "0.0.0",
+    "style-resolve": "^1.0.0",
     "through2": "^2.0.0",
     "xtend": "^4.0.1"
   },
