--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "falafel": "^1.2.0",
+    "insert-css": "^0.2.0",
     "is-stream": "^1.0.1",
     "map-limit": "0.0.1",
     "postcss": "^5.0.10",
@@ -31,9 +32,6 @@
     "style-resolve": "^1.0.0",
     "through2": "^2.0.0",
     "xtend": "^4.0.1"
-  },
-  "peerDependencies": {
-    "insert-css": "^0.2.0"
   },
   "devDependencies": {
     "browserify": "^13.0.0",
