--- a/package.json
+++ b/package.json
@@ -38,8 +38,9 @@
   },
   "devDependencies": {
     "browserify": "^13.0.0",
+    "codecov.io": "^0.1.6",
     "concat-stream": "^1.5.1",
-    "css-extract": "^1.0.0",
+    "css-extract": "^1.1.2",
     "css-type-base": "^1.0.2",
     "dependency-check": "^2.5.1",
     "insert-css": "^0.2.0",
