Don't parse files when they don't use sheetify
We do a quick indexOf check to test if sheetify is present in
the file's source before parsing it.

This speeds up the transform considerably for files not using
sheetify, and prevents syntax errors on fancy ES2016+ code
where sheetify is not in use.

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "css-type-base": "^1.0.2",
     "css-wipe": "^4.2.2",
     "dependency-check": "^2.5.1",
+    "from2-string": "^1.1.0",
     "insert-css": "^1.0.0",
     "istanbul": "^0.4.5",
     "jsdom": "^9.4.2",
