feat(transform): support subarg syntax in transform
This allows you to pass options to sheetify plugins using the browserify
subarg syntax on the cli:

```bash
browserify -t [ sheetify -u [ sheetify-sass --indentedSyntax ] ]
```

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "rimraf": "^2.5.1",
     "sheetify-cssnext": "^1.0.0",
     "standard": "^8.0.0",
+    "subarg": "^1.0.0",
     "tape": "^4.2.0"
   }
 }
