setup babel and test

--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "xtend": "^4.0.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babelify": "^8.0.0",
     "browserify": "^13.0.0",
     "codecov.io": "^0.1.6",
     "concat-stream": "^1.5.1",
