--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "css-modules"
   ],
   "dependencies": {
+    "@choojs/findup": "^0.2.0",
     "acorn-node": "^1.3.0",
     "fast-json-parse": "^1.0.2",
-    "findup": "^0.1.5",
     "insert-css": "^2.0.0",
     "map-limit": "0.0.1",
     "postcss": "^5.0.10",
