--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@choojs/findup": "^0.2.0",
     "acorn-node": "^1.3.0",
+    "estree-is-member-expression": "^1.0.0",
     "fast-json-parse": "^1.0.2",
     "insert-css": "^2.0.0",
     "map-limit": "0.0.1",
