--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "static-eval": "^2.0.0",
     "style-resolve": "^1.1.0",
     "through2": "^2.0.0",
-    "transform-ast": "^2.4.0",
-    "xtend": "^4.0.1"
+    "transform-ast": "^2.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
