--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 node_js:
-- "4"
-- "5"
-- "6"
-- "8"
+- "lts/*"
 - "node"
-sudo: false
+distro: xenial
 language: node_js
 script: "npm run test:cov"
 after_script: "cat ./coverage/lcov.info | codecov"
