--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sheetify",
-  "version": "7.4.0",
+  "version": "8.0.0-beta.0",
   "description": "Modular CSS bundler",
   "repository": "stackcss/sheetify",
   "license": "MIT",
